# sample-claude-code-web-agent-on-bedrock-agentcore

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
backend/: claude_system_prompt.md  server.py
backend/api/: __init__.py  files.py  invocations.py  oauth.py  plugins.py  sessions.py  workspace.py
backend/core/: session.py  session_manager.py  workspace_sync.py
backend/models/: schemas.py
backend/proxy/: litellm_proxy.py
claude/: PROJECTS.md  SESSION_ID_FLOW.md  WEB_CLIENT_SEARCH_RESULTS.md  web-client-logout-force-stop.md
deploy/: 02_deploy_agentcore.sh  03_deploy_amplify.sh  Dockerfile  README.md  config.env.template  deploy_all.sh
docs/: USER_GUIDE.md  USER_GUIDE.zh-CN.md
web_client/: .env.example  package-lock.json  package.json
web_client/src/: App.jsx  style.css
web_client/src/api/: client.js
web_client/src/components/: ChatContainer.jsx  FileBrowser.jsx  FilePreview.jsx  GitPanel.jsx  Login.jsx  Message.jsx  PluginsPanel.css  PluginsPanel.jsx  QuestionCard.jsx  SessionList.jsx  SettingsModal.jsx  Signup.jsx  SkillsPanel.css  TodoList.jsx
web_client/src/hooks/: useAuth.jsx  useClaudeAgent.js
